# ray-marching-2d

./: .env.cmake  .gitignore  CMakeLists.txt  README.md  release.bat
res/cl/: SDF.cl
src/: OCL_RayMarching.cpp  OCL_RayMarching.hpp  OCL_SDF.cpp  OCL_SDF.hpp  Ray.cpp  Ray.hpp  SDF.cl  ShapeContainer.hpp  defines.hpp  main.cpp  pch.hpp  ray-marching.cl  renderSDF.cl  rm.frag
